--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <form>
+      <div class="form-content">
+        <input
+          type="text"
+          class="form-control"
+          name="search"
+          placeholder="Search images..."
+        />
+        <button type="submit" class="btn">Search</button>
+      </div>
+    </form>
+
+    <div class="js-image-container">
+      <ul class="gallery-image"></ul>
+    </div>
+
+    <div>
+      <button type="button" class="btn btn-primary hidden">Load more</button>
+    </div>
+
+    <div class="loader-cont"><span class="loader"></span></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
